--- a/src/index.html
+++ b/src/index.html
@@ -51,19 +51,27 @@
 <body>
    <div class="wrapper">
       <header class="header">
-         <div class="container">
-            <div class="header__container">
-               
+            <div class="header__content">
+               <h3 class="header__myname">Александр Калинин</h3>
+               <h1 class="header__title title">web-разработчик из города Белгород</h1>
+               <div class="header__buttons">
+                  <a href="#" class="header__button button">Портфолио</a>
+               </div>
             </div>
-            <h3 class="header__myname">Александр Калинин</h3>
-            <h1 class="header__title title">Web-разработчик из города Белгород</h1>
-            <div class="header__buttons">
-               <a href="#" class="header__button button">Портфолио</a>
-            </div>
-         </div>
+            <aside class="aside">
+               <div class="menu-bg">
+               </div>
+               <nav class="menu">
+                  <ul class="menu__list">
+                     <li class="menu__item"><a href="#" class="menu__link">Обо мне</a></li>
+                     <li class="menu__item"><a href="#" class="menu__link">Навыки</a></li>
+                     <li class="menu__item"><a href="#" class="menu__link">Портфолио</a></li>
+                     <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
+                  </ul>
+               </nav>
+            </aside>
       </header>
    </div>
-
    <script src="js/script.js"></script>
 </body>
 
