--- a/src/index.html
+++ b/src/index.html
@@ -51,25 +51,25 @@
 <body>
    <div class="wrapper">
       <header class="header">
-            <div class="header__content">
-               <h3 class="header__myname">Александр Калинин</h3>
-               <h1 class="header__title title">web-разработчик из города Белгород</h1>
-               <div class="header__buttons">
-                  <a href="#" class="header__button button">Портфолио</a>
-               </div>
+         <div class="upheader__background"></div>
+         <div class="upheader">
+            <div class="upheader__contact">
+               <div class="upheader__name">ALEXANDER CALININ</div>
+               <a href="tel:89155221775"><span>tel:</span> +7 (915) 522 17 75</a>
             </div>
-            <aside class="aside">
-               <div class="menu-bg">
-               </div>
-               <nav class="menu">
-                  <ul class="menu__list">
-                     <li class="menu__item"><a href="#" class="menu__link">Обо мне</a></li>
-                     <li class="menu__item"><a href="#" class="menu__link">Навыки</a></li>
-                     <li class="menu__item"><a href="#" class="menu__link">Портфолио</a></li>
-                     <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
-                  </ul>
-               </nav>
-            </aside>
+            <div class="upheader__smm">
+               <div class="upheader__email">rwcalinin@gmail.com</div>
+               <a href="" class="upheader__smm-link"><img src="img/logotypes/Linkedin.png" alt="linkedin" class="upheader__smm-img"></a>
+               <a href="" class="upheader__smm-link"><img src="img/logotypes/GitHub-logo.png" alt="github" class="upheader__smm-img"></a>
+               <a href="" class="upheader__smm-link"><img src="img/logotypes/telegram.png" alt="telegram" class="upheader__smm-img"></a>
+            </div>
+         </div>
+
+         <div class="header__content">
+            <h3 class="header__myname">index.html</h3>
+            <h1 class="header__title title">&lt;web-developer/&gt;</h1>
+            <a href="#" class="header__button button">Portfolio</a>
+         </div>
       </header>
    </div>
    <script src="js/script.js"></script>
