--- a/src/index.html
+++ b/src/index.html
@@ -59,18 +59,41 @@
             </div>
             <div class="upheader__smm">
                <div class="upheader__email">rwcalinin@gmail.com</div>
-               <a href="" class="upheader__smm-link"><img src="img/logotypes/Linkedin.png" alt="linkedin" class="upheader__smm-img"></a>
-               <a href="" class="upheader__smm-link"><img src="img/logotypes/GitHub-logo.png" alt="github" class="upheader__smm-img"></a>
-               <a href="" class="upheader__smm-link"><img src="img/logotypes/telegram.png" alt="telegram" class="upheader__smm-img"></a>
+               <a href="" class="upheader__smm-link"><img src="img/logotypes/Linkedin.png" alt="linkedin"
+                     class="upheader__smm-img"></a>
+               <a href="" class="upheader__smm-link"><img src="img/logotypes/GitHub-logo.png" alt="github"
+                     class="upheader__smm-img"></a>
+               <a href="" class="upheader__smm-link"><img src="img/logotypes/telegram.png" alt="telegram"
+                     class="upheader__smm-img"></a>
             </div>
          </div>
 
-         <div class="header__content">
-            <h3 class="header__myname">index.html</h3>
-            <h1 class="header__title title">&lt;web-developer/&gt;</h1>
-            <a href="#" class="header__button button">Portfolio</a>
+         <div class="header__inner">
+            <div class="header__content">
+               <h3 class="header__myname">index.html</h3>
+               <h1 class="header__title title">&lt;web-developer/&gt;</h1>
+               <a href="#" class="header__button button">Portfolio</a>
+            </div>
+
+            <section class="tech">
+               <div class="tech__container">
+                  <div class="tech__item"><img src="img/technologies/html5.svg" alt="HTML"></div>
+                  <div class="tech__item"><img src="img/technologies/css3.svg" alt="CSS"></div>
+                  <div class="tech__item"><img src="img/technologies/JS.svg" alt="JavaScript"></div>
+                  <div class="tech__item"><img src="img/technologies/Jquery.svg" alt="JQuery"></div>
+                  <div class="tech__item"><img src="img/technologies/React.svg" alt="React"></div>
+                  <div class="tech__item"><img src="img/technologies/Node.js.svg" alt="NodeJS"></div>
+               </div>
+            </section>
          </div>
       </header>
+
+      <section class="about">
+         <div class="about__title">Обо мне</div>
+         <div class="about__content">
+            
+         </div>
+      </section>
    </div>
    <script src="js/script.js"></script>
 </body>
