--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
 <body>
    <div class="wrapper">
       <header class="header">
-         <div class="upheader__background"></div>
+         <div class="upheader__background">123</div>
          <div class="upheader">
             <div class="upheader__contact">
                <div class="upheader__name">ALEXANDER CALININ</div>
@@ -70,7 +70,7 @@
 
          <div class="header__inner">
             <div class="header__content">
-               <h3 class="header__myname">index.html</h3>
+               <h3 class="header__myname">#Calinin</h3>
                <h1 class="header__title title">&lt;web-developer/&gt;</h1>
                <a href="#" class="header__button button">Portfolio</a>
             </div>
@@ -89,11 +89,17 @@
       </header>
 
       <section class="about">
-         <div class="about__title">Обо мне</div>
-         <div class="about__content">
-            
+         <div class="about__inner">
+            <h2 class="about__title">Обо мне</h2>
+            <div class="about__content">
+               <img class="about__my-photo" src="" alt="calinin photo">
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+            </div>
          </div>
       </section>
+
    </div>
    <script src="js/script.js"></script>
 </body>
