--- a/src/index.html
+++ b/src/index.html
@@ -51,20 +51,21 @@
 <body>
    <div class="wrapper">
       <header class="header">
-         <div class="upheader__background">123</div>
+
+         <div class="upheader__background"></div>
          <div class="upheader">
-            <div class="upheader__contact">
-               <div class="upheader__name">ALEXANDER CALININ</div>
-               <a href="tel:89155221775"><span>tel:</span> +7 (915) 522 17 75</a>
+            <div class="upheader__contacts">
+               <div class="upheader__email">
+                  rwcalinin@gmail.com
+               </div>
+               <div class="upheader__phone">
+                  <a href="tel:89155221775" class="upheader__phone-link">+7 (915) 522 17 75</a>
+               </div>
             </div>
             <div class="upheader__smm">
-               <div class="upheader__email">rwcalinin@gmail.com</div>
-               <a href="" class="upheader__smm-link"><img src="img/logotypes/Linkedin.png" alt="linkedin"
-                     class="upheader__smm-img"></a>
-               <a href="" class="upheader__smm-link"><img src="img/logotypes/GitHub-logo.png" alt="github"
-                     class="upheader__smm-img"></a>
-               <a href="" class="upheader__smm-link"><img src="img/logotypes/telegram.png" alt="telegram"
-                     class="upheader__smm-img"></a>
+               <a href="#" class="upheader__smm-link"><img style="width: 38px" src="img/logotypes/telegram-icon.svg" alt="telegram"></a>
+               <a href="#" class="upheader__smm-link"><img style="width: 30px" src="img/logotypes/linkedin-icon.svg" alt="LinkedIn"></a>
+               <a href="#" class="upheader__smm-link"><img style="width: 40px" src="img/logotypes/github-icon.svg" alt="GitHub"></a>
             </div>
          </div>
 
@@ -93,6 +94,78 @@
             <h2 class="about__title">Обо мне</h2>
             <div class="about__content">
                <img class="about__my-photo" src="" alt="calinin photo">
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
+                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
+                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
                <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
                   necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
                   voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
