final design exp6

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,6 @@
    <div class="wrapper">
       <header class="header">
 
-         <div class="upheader__background"></div>
          <div class="upheader">
             <div class="upheader__contacts">
                <div class="upheader__email">
@@ -63,15 +62,18 @@
                </div>
             </div>
             <div class="upheader__smm">
-               <a href="#" class="upheader__smm-link"><img style="width: 38px" src="img/logotypes/telegram-icon.svg" alt="telegram"></a>
-               <a href="#" class="upheader__smm-link"><img style="width: 30px" src="img/logotypes/linkedin-icon.svg" alt="LinkedIn"></a>
-               <a href="#" class="upheader__smm-link"><img style="width: 40px" src="img/logotypes/github-icon.svg" alt="GitHub"></a>
+               <a href="#" class="upheader__smm-link"><img style="width: 40px" src="img/logotypes/telegram-logo.png"
+                     alt="telegram"></a>
+               <a href="#" class="upheader__smm-link"><img style="width: 40px" src="img/logotypes/Lin-icon.png"
+                     alt="LinkedIn"></a>
+               <a href="#" class="upheader__smm-link"><img style="width: 40px" src="img/logotypes/GitHub-icon.png"
+                     alt="GitHub"></a>
             </div>
          </div>
 
          <div class="header__inner">
             <div class="header__content">
-               <h3 class="header__myname">#Calinin</h3>
+               <h3 class="header__subtitle subtitle"># Calinin</h3>
                <h1 class="header__title title">&lt;web-developer/&gt;</h1>
                <a href="#" class="header__button button">Portfolio</a>
             </div>
@@ -90,87 +92,31 @@
       </header>
 
       <section class="about">
-         <div class="about__inner">
-            <h2 class="about__title">Обо мне</h2>
-            <div class="about__content">
-               <img class="about__my-photo" src="" alt="calinin photo">
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
-               <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
-                  necessitatibus itaque laboriosam magnam voluptatum magni numquam, odio distinctio accusantium
-                  voluptatem nam earum eveniet deleniti ex, debitis dolore nostrum quas.</div>
+         <div class="container">
+            <div class="about__upper-titles">
+               <h2 class="about__title title">
+                  <span class="colored-angle">&lt;</span> about <span class="colored-angle">&gt;</span>
+               </h2>
+            </div>
+
+
+            <div class="about__inner">
+               <div class="about__left-block">
+                  <h4><span class="colored-angle">&lt;</span><strong> Hello! I'm Alexander Calinin </strong><span class="colored-angle">&gt;</span></h4>
+                  <hr>
+                  <p>
+                     I'm frontend-developer. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis
+                     repudiandae aperiam eos obcaecati corrupti ipsa laudantium, provident quae, id totam animi minima
+                     ad assumenda explicabo inventore odio consequatur vitae ratione.
+                  </p>
+               </div>
+               <div class="about__right-block">MY SKILLS HERE. Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+                  obcaecati saepe autem nostrum numquam nesciunt expedita, aliquid dolores, in excepturi maiores, ipsa
+                  id ut laborum dolore iure eaque nihil amet.</div>
             </div>
          </div>
+
+
       </section>
 
    </div>
