--- a/src/index.html
+++ b/src/index.html
@@ -49,77 +49,59 @@
 </head>
 
 <body>
-   <div class="wrapper">
-      <header class="header">
 
-         <div class="upheader">
-            <div class="upheader__contacts">
-               <div class="upheader__email">
-                  rwcalinin@gmail.com
-               </div>
-               <div class="upheader__phone">
-                  <a href="tel:89155221775" class="upheader__phone-link">+7 (915) 522 17 75</a>
-               </div>
+   <section class="promo">
+      <div class="header__bg"></div>
+      <div class="container">
+
+         <header class="header">
+            <div class="header__contacts header__side-margin">
+               <div class="header__email"><a href="mailto:rentisfox@gmail.com">rentisfox@gmail.com</a></div>
+               <div class="header__phone"><a href="tel: 89155221775">tel. +7(915)522-17-75</a></div>
             </div>
-            <div class="upheader__smm">
-               <a href="#" class="upheader__smm-link"><img style="width: 40px" src="img/logotypes/telegram-logo.png"
-                     alt="telegram"></a>
-               <a href="#" class="upheader__smm-link"><img style="width: 40px" src="img/logotypes/Lin-icon.png"
-                     alt="LinkedIn"></a>
-               <a href="#" class="upheader__smm-link"><img style="width: 40px" src="img/logotypes/GitHub-icon.png"
-                     alt="GitHub"></a>
+            <div class="header__smm header__side-margin">
+               <a href="https://t.me/rwcalinin" class="header__smm-link" target="_blank"><img
+                     src="icons/Telegram-icon.svg" alt="Telegram" class="header__icon"></a>
+               <a href="https://linkedin.com" class="header__smm-link" target="_blank"><img
+                     src="icons/Linkedin-icon.svg" alt="LinkedIn" class="header__icon"></a>
+               <a href="https://github.com/rwcalinin" class="header__smm-link" target="_blank"><img
+                     src="icons/GitHub-icon.svg" alt="GitHub" class="header__icon"></a>
+            </div>
+         </header>
+
+         <div class="promo__flex">
+            <div class="promo__main">
+               <h2 class="promo__subtitle">Alexander Calinin</h2>
+               <h1 id="typing" class="promo__title"><span class="angle__colored">&lt;</span>web-developer<span
+                     class="angle__colored">&gt;</span></h1>
+               <a href="#" class="promo__button">go to Portfolio</a>
+            </div>
+
+            <div class="promo__tech">
+               <div class="promo__tech-box"> <img class="promo__tech-img" src="icons/technologies/html5.svg" alt="html">
+               </div>
+               <div class="promo__tech-box"> <img class="promo__tech-img" src="icons/technologies/css.svg" alt="css">
+               </div>
+               <div class="promo__tech-box"> <img class="promo__tech-img" src="icons/technologies/js.svg"
+                     alt="javascript">
+               </div>
+               <div class="promo__tech-box"> <img class="promo__tech-img" src="icons/technologies/jq.svg" alt="jquery">
+               </div>
+               <div class="promo__tech-box"> <img class="promo__tech-img" src="icons/technologies/react.svg"
+                     alt="react">
+               </div>
+               <div class="promo__tech-box"> <img class="promo__tech-img" src="icons/technologies/node.svg"
+                     alt="nodejs">
+               </div>
+               <div class="promo__tech-box"> <img class="promo__tech-img" src="icons/technologies/bootstrap.svg"
+                     alt="bootstrap"> </div>
             </div>
          </div>
 
-         <div class="header__inner">
-            <div class="header__content">
-               <h3 class="header__subtitle subtitle"># Calinin</h3>
-               <h1 class="header__title title">&lt;web-developer/&gt;</h1>
-               <a href="#" class="header__button button">Portfolio</a>
-            </div>
+      </div>
 
-            <section class="tech">
-               <div class="tech__container">
-                  <div class="tech__item"><img src="img/technologies/html5.svg" alt="HTML"></div>
-                  <div class="tech__item"><img src="img/technologies/css3.svg" alt="CSS"></div>
-                  <div class="tech__item"><img src="img/technologies/JS.svg" alt="JavaScript"></div>
-                  <div class="tech__item"><img src="img/technologies/Jquery.svg" alt="JQuery"></div>
-                  <div class="tech__item"><img src="img/technologies/React.svg" alt="React"></div>
-                  <div class="tech__item"><img src="img/technologies/Node.js.svg" alt="NodeJS"></div>
-               </div>
-            </section>
-         </div>
-      </header>
-
-      <section class="about">
-         <div class="container">
-            <div class="about__upper-titles">
-               <h2 class="about__title title">
-                  <span class="colored-angle">&lt;</span> about <span class="colored-angle">&gt;</span>
-               </h2>
-            </div>
-
-
-            <div class="about__inner">
-               <div class="about__left-block">
-                  <h4><span class="colored-angle">&lt;</span><strong> Hello! I'm Alexander Calinin </strong><span class="colored-angle">&gt;</span></h4>
-                  <hr>
-                  <p>
-                     I'm frontend-developer. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis
-                     repudiandae aperiam eos obcaecati corrupti ipsa laudantium, provident quae, id totam animi minima
-                     ad assumenda explicabo inventore odio consequatur vitae ratione.
-                  </p>
-               </div>
-               <div class="about__right-block">MY SKILLS HERE. Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
-                  obcaecati saepe autem nostrum numquam nesciunt expedita, aliquid dolores, in excepturi maiores, ipsa
-                  id ut laborum dolore iure eaque nihil amet.</div>
-            </div>
-         </div>
-
-
-      </section>
-
-   </div>
+   </section>
+   <script src="js/jquery-3.6.0.min.js"></script>
    <script src="js/script.js"></script>
 </body>
 
