header-promo+adapt ready

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,8 @@
    <meta name="theme-color" content="#ffffff">
 
    <link rel="stylesheet" href="css/style.min.css">
+   <script src="js/jquery-3.6.0.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 </head>
 
 <body>
@@ -72,7 +74,7 @@
          <div class="promo__flex">
             <div class="promo__main">
                <h2 class="promo__subtitle">Alexander Calinin</h2>
-               <h1 id="typing" class="promo__title"><span class="angle__colored">&lt;</span>web-developer<span
+               <h1 class="promo__title"><span class="angle__colored">&lt;</span> <span id="typing"></span><span
                      class="angle__colored">&gt;</span></h1>
                <a href="#" class="promo__button">go to Portfolio</a>
             </div>
@@ -99,9 +101,8 @@
          </div>
 
       </div>
-
    </section>
-   <script src="js/jquery-3.6.0.min.js"></script>
+   <div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div>
    <script src="js/script.js"></script>
 </body>
 
