--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,94 @@
 
       </div>
    </section>
-   <div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div><div>123</div>
+
+   <section class="about">
+      <h2 class="about__title"><span class="angle__colored">&lt;</span> <span id="about-typing"></span><span
+            class="angle__colored">&gt;</span>
+      </h2>
+      <div class="container">
+         <div class="about__descr about-box">
+            <h3 class="about__descr-title">Hello! I'm Alexander Calinin</h3>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt adipisci excepturi error tenetur animi
+            nisi
+            beatae voluptas quas, eligendi molestiae culpa quod quae quisquam, laudantium dicta. Pariatur, delectus.
+            Quibusdam, id?
+         </div>
+         <div class="about__skills about-box">
+            <h3 class="about__descr-title">Soft Skills</h3>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid aspernatur vel voluptatum similique animi
+            laudantium nemo maiores! Sit repellendus sed aliquam a obcaecati quasi illo laudantium quam dolorum!
+            Aliquid,
+            aut.
+         </div>
+      </div>
+      <div class="line"></div>
+   </section>
+
+   <section class="portfolio">
+      <div class="container">
+         <h2 class="portfolio__title about__title"><span class="angle__colored">&lt;</span> <span
+               id="portfolio-typing"></span><span class="angle__colored">&gt;</span></h2>
+         <div class="portfolio__grid">
+            <div id="first-site" class="portfolio__item"></div>
+            <div id="second-site" class="portfolio__item"></div>
+            <div id="third-site" class="portfolio__item"></div>
+            <div id="four-site" class="portfolio__item"></div>
+            <div id="five-site" class="portfolio__item"></div>
+            <div id="six-site" class="portfolio__item"></div>
+         </div>
+      </div>
+      <div class="line"></div>
+   </section>
+
+   <section class="contact">
+      <div class="container">
+         <div class="contact__inner">
+            <div class="contact__left-block">
+               <h2 class="contact__title about__title"><span class="angle__colored">&lt;</span> <span
+                  id="contact-typing"></span><span class="angle__colored">&gt;</span></h2>
+               <form action="post" class="contact__form">
+                  <div class="contact__inputs">
+                     <div id="first-grid-input" class="contact__input">
+                        <input placeholder="Your name" name="name" id="name-input" class="contact__input-item" type="text">
+                     </div>
+                     <div id="second-grid-input" class="contact__input">
+                        <input placeholder="Your e-mail" name="email" id="email-input" class="contact__input-item" type="email">
+                     </div>
+                  </div>
+
+                  <div id="third-grid-input" class="contact__textarea">
+                     <textarea placeholder="Your message" name="text" id="textarea-input" class="contact__textarea-input"></textarea>
+                  </div>
+
+                  <button id="four-grid-input" class="contact__button">Send Message</button>
+
+               </form>
+            </div>
+            <div class="contact__right-block">
+               <div class="contact__smm">
+                  <a href="https://t.me/rwcalinin" class="contact__smm-link" target="_blank"><img
+                        src="icons/Telegram-icon.svg" alt="Telegram" class="contact__icon"></a>
+                  <a href="https://linkedin.com" class="contact__smm-link" target="_blank"><img
+                        src="icons/Linkedin-icon.svg" alt="LinkedIn" class="contact__icon"></a>
+                  <a href="https://github.com/rwcalinin" class="contact__smm-link" target="_blank"><img
+                        src="icons/GitHub-icon.svg" alt="GitHub" class="contact__icon"></a>
+               </div>
+
+               <div class="contact__photo">
+                  <img src="img/avatar.jpg" alt="calinin photo">
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+
+   <footer class="footer">
+      <div class="container">
+         
+      </div>
+   </footer>
+
    <script src="js/script.js"></script>
 </body>
 
