29apr upd, layout ready

--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <title>А. Калинин - веб-разработчик</title>
-   <meta name="title" content="Мое портфолио">
-   <meta name="description" content="Здесь вы сможете ознакомиться с моими работами и узнать больше обо мне">
+   <title>WEB-DEVELOPER A. Calinin</title>
+   <meta name="title" content="Frontend developer Alexander Calinin">
+   <meta name="description" content="I'm Alexander Calinin, web-developer.">
 
    <!-- Open Graph / Facebook -->
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://metatags.io/">
-   <meta property="og:title" content="Мое портфолио">
-   <meta property="og:description" content="Здесь вы сможете ознакомиться с моими работами и узнать больше обо мне">
+   <meta property="og:title" content="Frontend developer A.Calinin">
+   <meta property="og:description" content="I'm Alexander Calinin, web-developer.">
    <meta property="og:image"
       content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
    <!-- Twitter -->
    <meta property="twitter:card" content="summary_large_image">
    <meta property="twitter:url" content="https://metatags.io/">
-   <meta property="twitter:title" content="Мое портфолио">
-   <meta property="twitter:description"
-      content="Здесь вы сможете ознакомиться с моими работами и узнать больше обо мне">
+   <meta property="twitter:title" content="Frontend developer A.Calinin">
+   <meta property="twitter:description" content="I'm Alexander Calinin, web-developer.">
    <meta property="twitter:image"
       content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
    <!-- Favicon  -->
-   <link rel="apple-touch-icon" sizes="57x57" href="icons/favicon//apple-icon-57x57.png">
+   <!-- <link rel="apple-touch-icon" sizes="57x57" href="icons/favicon//apple-icon-57x57.png">
    <link rel="apple-touch-icon" sizes="60x60" href="icons/favicon//apple-icon-60x60.png">
    <link rel="apple-touch-icon" sizes="72x72" href="icons/favicon//apple-icon-72x72.png">
    <link rel="apple-touch-icon" sizes="76x76" href="icons/favicon//apple-icon-76x76.png">
@@ -40,10 +39,10 @@
    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon//favicon-32x32.png">
    <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon//favicon-96x96.png">
    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon//favicon-16x16.png">
-   <link rel="manifest" href="icons/favicon//manifest.json">
-   <meta name="msapplication-TileColor" content="#ffffff">
-   <meta name="msapplication-TileImage" content="icons/favicon//ms-icon-144x144.png">
-   <meta name="theme-color" content="#ffffff">
+   <link rel="manifest" href="icons/favicon//manifest.json"> -->
+   <meta name="msapplication-TileColor" content="#5dbaff">
+   <!-- <meta name="msapplication-TileImage" content="icons/favicon//ms-icon-144x144.png"> -->
+   <meta name="theme-color" content="#5dbaff">
 
    <link rel="stylesheet" href="css/style.min.css">
    <script src="js/jquery-3.6.0.min.js"></script>
@@ -136,7 +135,6 @@
             <div id="third-site" class="portfolio__item"></div>
             <div id="four-site" class="portfolio__item"></div>
             <div id="five-site" class="portfolio__item"></div>
-            <div id="six-site" class="portfolio__item"></div>
          </div>
       </div>
       <div class="line"></div>
@@ -147,19 +145,22 @@
          <div class="contact__inner">
             <div class="contact__left-block">
                <h2 class="contact__title about__title"><span class="angle__colored">&lt;</span> <span
-                  id="contact-typing"></span><span class="angle__colored">&gt;</span></h2>
+                     id="contact-typing"></span><span class="angle__colored">&gt;</span></h2>
                <form action="post" class="contact__form">
                   <div class="contact__inputs">
                      <div id="first-grid-input" class="contact__input">
-                        <input placeholder="Your name" name="name" id="name-input" class="contact__input-item" type="text">
+                        <input placeholder="Your name" name="name" id="name-input" class="contact__input-item"
+                           type="text">
                      </div>
                      <div id="second-grid-input" class="contact__input">
-                        <input placeholder="Your e-mail" name="email" id="email-input" class="contact__input-item" type="email">
+                        <input placeholder="Your e-mail" name="email" id="email-input" class="contact__input-item"
+                           type="email">
                      </div>
                   </div>
 
                   <div id="third-grid-input" class="contact__textarea">
-                     <textarea placeholder="Your message" name="text" id="textarea-input" class="contact__textarea-input"></textarea>
+                     <textarea placeholder="Your message" name="text" id="textarea-input"
+                        class="contact__textarea-input"></textarea>
                   </div>
 
                   <button id="four-grid-input" class="contact__button">Send Message</button>
@@ -186,7 +187,9 @@
 
    <footer class="footer">
       <div class="container">
-         
+         <div class="footer__text">
+            2021 © Alexander Calinin
+         </div>
       </div>
    </footer>
 
